<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="15dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardElevation="8dp">

                    <ImageView
                        android:id="@+id/posterImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/movie_poster"
                        android:scaleType="fitXY"
                        android:minWidth="260dp"
                        android:minHeight="360dp"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbarSize="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        app:cardBackgroundColor="@color/backgroundText"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="5dp"
                                android:text="@string/movie_basic_data"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingVertical="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:paddingEnd="5dp"
                                    android:text="@string/movie_title"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_title_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:orientation="horizontal"
                                android:paddingVertical="5dp">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:paddingStart="10dp"
                                        android:paddingEnd="5dp"
                                        android:text="@string/movie_year"
                                        android:textAlignment="textStart"
                                        android:textColor="@color/white"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/movie_year_textView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="20sp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1.5"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:paddingStart="10dp"
                                        android:paddingEnd="5dp"
                                        android:text="@string/movie_runtime"
                                        android:textAlignment="textStart"
                                        android:textColor="@color/white"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/movie_runtime_textView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="20sp" />
                                </LinearLayout>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingVertical="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:paddingEnd="5dp"
                                    android:text="@string/movie_genre"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_genre_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingVertical="5dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingStart="10dp"
                                    android:paddingEnd="5dp"
                                    android:text="@string/movie_director"
                                    android:textAlignment="textStart"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/movie_director_textView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="20sp" />
                            </LinearLayout>



                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:orientation="horizontal"
                                android:paddingVertical="5dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:paddingStart="10dp"
                                        android:paddingEnd="5dp"
                                        android:text="@string/movie_country"
                                        android:textAlignment="textStart"
                                        android:textColor="@color/white"
                                        android:textSize="20sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/movie_country_textView"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="20sp" />
                                </LinearLayout>

                            </LinearLayout>


                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:cardBackgroundColor="@color/backgroundText"
                        app:cardCornerRadius="16dp"
                        app:cardElevation="8dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingStart="10dp"
                                android:paddingEnd="5dp"
                                android:text="@string/movie_plot"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/movie_plot_textView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp" />


                        </LinearLayout>





                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>


        <!--        <LinearLayout-->
        <!--            android:id="@+id/activity_detail_buttons_linearLayout"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_margin="15dp"-->
        <!--            android:orientation="horizontal"-->
        <!--            app:layout_constraintBottom_toTopOf="parent"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent">-->

        <!--            <Button-->
        <!--                android:id="@+id/activity_detail_previous_button"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="5dp"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/activity_detail_previous_button"-->
        <!--                android:textSize="16sp" />-->

        <!--            <Button-->
        <!--                android:id="@+id/activity_detail_next_button"-->
        <!--                android:layout_width="0dp"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginStart="5dp"-->
        <!--                android:layout_weight="1"-->
        <!--                android:text="@string/activity_detail_next_button"-->
        <!--                android:textSize="16sp" />-->

        <!--        </LinearLayout>-->

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>